finish the get pods list under namespace api, pass the unit test and api test from swagger
no conf
